# binance_connect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  rust_wf.yml
src/: constants.rs  error.rs  lib.rs
src/futures_usd/: client.rs  deserializer.rs  listen_key.rs  response.rs  stream.rs
src/futures_usd/enums/: binance.rs  events.rs  streams.rs
tests/: futures_usd_integration_test.rs
