[package]
authors = ["Erik-Jan van de Wal"]
name = "binance_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
tungstenite = { version = "0.20.0", features = ["native-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
url = "2.4.0"
log = "0.4.19"
tracing-subscriber = "0.3.17"
strum_macros = "0.25.0"
strum = "0.25.0"
async-std = "1.12.0"