[package]
authors = ["Erik-Jan van de Wal"]
name = "binance_connect"
description = "A collection of connectors for the Binance Exchange"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/erik404/binance_connect/tree/v1.0.0"
rust-version = "1.63.0"
readme = "README.md"
license-file = "LICENSE.txt"
keywords = ["binance", "connector", "websocket", "event", "crypto"]

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
tungstenite = { version = "0.20.0", features = ["native-tls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
url = "2.4.0"
log = "0.4.19"
strum_macros = "0.25.0"
strum = "0.25.0"
async-std = "1.12.0"